rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-f5c04828f903506d.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-f5c04828f903506d: only-arrow.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-f5c04828f903506d.d: only-arrow.rs

only-arrow.rs:
